# access_hub

./: .gitignore  CODE_OF_CONDUCT.md  access_hub.iss  download.txt  hello.py  pyproject.toml  readme.html  readme.md  requirements.txt  version.txt
.github/workflows/: release.yml
source/: AccessHub.py  access_hub.iss  access_hub.py  app_vars.py  requirements.txt  speech.py
source/gui/: custom_controls.py  dialogs.py  settings.py
source/tools/: password_doctor.py  shutdown_control.py  speed_test.py  task_scheduler.py  text_utils.py  updater.py
source/tools/accessible_terminal/: accessible_terminal.py  download_dialogs.py  file_manager.py  session_manager.py  session_viewer.py  upload_dialogs.py
source/tools/eleven_labs/: audio_isolator.py  audio_player.py  eleven_labs.py  settings_editor.py  shared_voices.py  sound_generator.py  speech_to_speech.py  voice_cloning.py  voice_design.py  voice_library.py
source/tools/file_utils/: advanced_search.py  file_tools.py  media_converter.py  multi_rename.py  search_utils.py
source/tools/gemini/: chat.py
source/tools/network_player/: channel_viewer.py  comments.py  custom_button.py  download_dialog.py  download_dialog_test.py  download_dialogs.py  favorites_manager.py  go_to_time.py  media_player.py  network_player.py  settings.py  subtitle_manager.py  utils.py  youtube_player.py  youtube_search.py  youtube_streamer.py
source/tools/online_tts/: batch_processor.py  online_tts.py
source/tools/task_scheduler/: alarm_notification.py  alarm_settings.py  task_scheduler.py  tasks.py
source/tools/text_utils/: advanced_finder.py  json_viewer.py  text_cleaner.py  text_utils.py  xml_viewer.py
