[project]
name = "access-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accessible-output3",
    "appguard>=1.0.2",
    "configobj>=5.0.9",
    "cryptography>=44.0.1",
    "google-genai>=1.2.0",
    "gtts>=2.5.4",
    "keyboard>=0.13.5",
    "keyring>=25.6.0",
    "langdetect>=1.0.9",
    "msspeech>=3.7.12",
    "packaging>=25.0",
    "paramiko>=3.5.1",
    "passwordmeter>=0.1.8",
    "pwnedpasswords>=2.0.0",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pydub>=0.25.1",
    "pyopenssl>=25.0.0",
    "python-vlc>=3.0.21203",
    "requests>=2.32.3",
    "setuptools>=75.8.2",
    "speechrecognition>=3.14.1",
    "speedtest-cli>=2.1.3",
    "srt>=3.5.3",
    "wxpython>=4.2.2",
    "yt-dlp>=2025.2.19",
]

[tool.uv.sources]
accessible-output3 = { git = "https://github.com/SigmaNight/accessible_output3" }
